Updated as per review comments
Signed-off-by: ashumahajan <ashu.mahajan@swirldslabs.com>